--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html class="dark">
 
 <head>
@@ -14,6 +14,7 @@
 </head>
 
 <body class="bg-gray-100 dark:bg-gray-800">
+   
     <nav class="bg-white border-gray-200 dark:bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -41,11 +42,12 @@
                                     stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                             </svg>
                         </div>
-                        <input type="search" id="default-search"
+                        <input type="search" id="inputBox"
                             class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-full bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="Search..." />
                         <button type="submit"
-                            class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
+                            class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                            id="searchBtn">Search</button>
                     </div>
                 </div>
             </div>
@@ -66,11 +68,12 @@
                                     stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" />
                             </svg>
                         </div>
-                        <input type="search" id="default-search"
+                        <input type="search" id="inputBoxMobile"
                             class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-full bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
                             placeholder="Search..." />
                         <button
-                            class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
+                            class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+                            id="searchBtnMobile">Search</button>
                     </div>
                 </div>
                 <label class="inline-flex items-center cursor-pointer">
@@ -86,13 +89,15 @@
     </nav>
     <div
         class="container mx-auto my-5  bg-white dark:bg-gray-900 p-5 rounded-lg flex justify-between items-center flex-wrap">
-        <div class=" text-black dark:text-white">
-            <h2 class="text-4xl font-bold mb-5" id="mainTemp">21°</h2>
-            <p class="text-xl text-gray-400" id="locationName">Mumbai</p>
+        <div class="">
+            <h2 class="text-4xl font-bold mb-5 text-gray-900 dark:text-white " id="mainTemp">-</h2>
+            <p class="text-xl text-gray-400" id="locationName">-</p>
         </div>
         <div class="text-black dark:text-white text-center">
-            <img src="src/cloudLogo.png" alt="icon" id="weatherIcon" class="h-20 w-20">
-            <p class="text-xl text-gray-400" id="descMain">Rainy</p>
+            <div class="bg-blue-500 rounded-full">
+                <img src="/" alt="icon" id="weatherIcon" class="h-20 w-20">
+            </div>
+            <p class="text-xl text-gray-400" id="descMain">-</p>
         </div>
         <div class="relative overflow-x-auto">
             <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 ">
@@ -101,8 +106,7 @@
                         <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
                             Cloudy
                         </th>
-                        <td class="px-6 py-4" id="cloud"> 
-                            100%
+                        <td class="px-6 py-4" id="cloud">-
                         </td>
                     </tr>
                     <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
@@ -110,7 +114,7 @@
                             Humidity
                         </th>
                         <td class="px-6 py-4" id="humidity">
-                            84%
+                            -
                         </td>
                     </tr>
                     <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
@@ -118,7 +122,7 @@
                             Wind speeh
                         </th>
                         <td class="px-6 py-4" id="speed">
-                            17 km/h
+                            -
                         </td>
                     </tr>
                     <tr class="bg-white dark:bg-gray-800 ">
@@ -126,7 +130,7 @@
                             Visibility
                         </th>
                         <td class="px-6 py-4" id="visi">
-                            10 Meters
+                            -
                         </td>
                     </tr>
                 </tbody>
@@ -134,7 +138,7 @@
         </div>
     </div>
     <div class="container mx-auto my-5  bg-white dark:bg-gray-900 p-5 rounded-lg ">
-        <h2 class="text-3xl text-black dark:text-white font-bold mb-5">Daily Forcast</h2>
+        <h2 class="text-3xl text-gray-900 dark:text-white  font-bold mb-5">Daily Forcast</h2>
         <ol class="items-center sm:flex w-full">
             <li class="relative mb-6 sm:mb-0 w-full">
                 <div class="flex items-center">
@@ -148,7 +152,7 @@
                     </div>
                     <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
                 </div>
-                <div class="mt-3 sm:pe-8">
+                <div class="mt-3 sm:pe-8 weatherDays">
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">21°</h3>
                     <time
                         class="block mb-2 text-lg font-normal leading-none text-gray-400 dark:text-gray-500">Monday</time>
@@ -167,7 +171,7 @@
                     </div>
                     <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
                 </div>
-                <div class="mt-3 sm:pe-8">
+                <div class="mt-3 sm:pe-8 weatherDays">
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">21°</h3>
                     <time
                         class="block mb-2 text-lg font-normal leading-none text-gray-400 dark:text-gray-500">Monday</time>
@@ -186,7 +190,7 @@
                     </div>
                     <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
                 </div>
-                <div class="mt-3 sm:pe-8">
+                <div class="mt-3 sm:pe-8 weatherDays">
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">21°</h3>
                     <time
                         class="block mb-2 text-lg font-normal leading-none text-gray-400 dark:text-gray-500">Monday</time>
@@ -205,7 +209,7 @@
                     </div>
                     <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
                 </div>
-                <div class="mt-3 sm:pe-8">
+                <div class="mt-3 sm:pe-8 weatherDays">
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">21°</h3>
                     <time
                         class="block mb-2 text-lg font-normal leading-none text-gray-400 dark:text-gray-500">Monday</time>
@@ -224,7 +228,7 @@
                     </div>
                     <div class="hidden sm:flex w-full bg-gray-200 h-0.5 dark:bg-gray-700"></div>
                 </div>
-                <div class="mt-3 sm:pe-8">
+                <div class="mt-3 sm:pe-8 weatherDays">
                     <h3 class="text-2xl font-semibold text-gray-900 dark:text-white">21°</h3>
                     <time
                         class="block mb-2 text-lg font-normal leading-none text-gray-400 dark:text-gray-500">Monday</time>
@@ -232,13 +236,14 @@
                 </div>
             </li>
 
+
         </ol>
     </div>
     <div class="container mx-auto my-5  bg-white dark:bg-gray-900 p-5 rounded-lg">
         <div class="w-full bg-white rounded-lg shadow dark:bg-gray-800 p-4 md:p-6">
             <div class="flex justify-between">
                 <div>
-                    <h5 class="leading-none text-3xl font-medium text-gray-900 dark:text-white pb-2">3 hours temparture
+                    <h5 class="leading-none text-3xl font-medium text-gray-900 dark:text-white pb-2">6 hours temperature
                     </h5>
                 </div>
             </div>
@@ -246,17 +251,27 @@
         </div>
     </div>
     <div class="container mx-auto my-5  bg-white dark:bg-gray-900 p-5 rounded-lg">
-        <h2 class="text-3xl text-black dark:text-white font-medium mb-5">Popular cites</h2>
-        <div class="flex  flex-wrap rounded-md shadow-sm">
-            <button type="button" class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">London</button>
-            <button type="button" class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">New York</button>
-            <button type="button" class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Kolkata</button>
-            <button type="button" class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Mumbai</button>
+        <h2 class="text-3xl text-gray-900 dark:text-white  font-medium mb-5">Popular cites</h2>
+        <div class="flex  flex-wrap rounded-md shadow-sm btn-box">
+            <button type="button"
+                class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                data-location="london">London</button>
+            <button type="button"
+                class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                data-location="New york">New
+                York</button>
+            <button type="button"
+                class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                data-location="kolkata">Kolkata</button>
+            <button type="button"
+                class="py-2.5 px-8 me-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-full border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700"
+                data-location="mumbai">Mumbai</button>
         </div>
     </div>
     <script type="module" src="main.js"></script>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 </body>
+
 </html>
